se modifica el arranque, para ponerle la varable que necesitemos

--- a/angular.json
+++ b/angular.json
@@ -75,6 +75,14 @@
                     "configurations": {
                         "production": {
                             "browserTarget": "imperial-trazabilidad:build:production"
+                        },
+                        "desa": {
+                            "browserTarget": "imperial-trazabilidad:build",
+                            "proxyConfig": "proxy.desa.json"
+                        },
+                        "qa": {
+                            "browserTarget": "imperial-trazabilidad:build",
+                            "proxyConfig": "proxy.qa.json"
                         }
                     }
                 },
