--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
-    "start:legacy": "NODE_OPTIONS=--openssl-legacy-provider ng serve",
+    "start": "ng serve --proxy-config proxy.conf.json",
+    "start:legacy": "NODE_OPTIONS=--openssl-legacy-provider ng serve --proxy-config proxy.conf.json",
     "build": "ng build",
+    "build:legacy": "NODE_OPTIONS=--openssl-legacy-provider ng build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
