--- a/angular.json
+++ b/angular.json
@@ -20,7 +20,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/imperial-trazabilidad",
+            "outputPath": "dist/trazabilidad-app",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -28,7 +28,8 @@
             "aot": true,
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/web.config"
             ],
             "styles": [
               "src/theme.scss",
@@ -39,6 +40,7 @@
           },
           "configurations": {
             "production": {
+              "baseHref": "/trazabilidad-app/",
               "fileReplacements": [
                 {
                   "replace": "src/environments/environment.ts",
