--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
     "ng": "ng",
     "start": "cross-env NODE_OPTIONS=--openssl-legacy-provider ng serve --proxy-config proxy.conf.json",
     "start:legacy": "cross-env NODE_OPTIONS=--openssl-legacy-provider ng serve --proxy-config proxy.conf.json --poll=1000",
-    "build": "cross-env NODE_OPTIONS=--openssl-legacy-provider ng build --base-href /trazabilidad-app/ --configuration=production",
+    "build": "cross-env NODE_OPTIONS=--openssl-legacy-provider ng build --base-href /MisCompras-app/ --configuration=production",
     "build:legacy": "cross-env NODE_OPTIONS=--openssl-legacy-provider ng build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "build-dev": "cross-env NODE_OPTIONS=--openssl-legacy-provider ng build --base-href /trazabilidad-app/ --configuration=production"
+    "build-dev": "cross-env NODE_OPTIONS=--openssl-legacy-provider ng build --base-href /MisCompras-app/ --configuration=production"
   },
   "private": true,
   "dependencies": {
